COD-98: fix: text overflow issues in relevant sections

--- a/styles.css
+++ b/styles.css
@@ -29,15 +29,15 @@ body {
 
 .card {
   background-color: var(--dark-grey);
-  max-width: 90%;
+  width: 23.75rem;
   padding: 2.5rem;
-  margin: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   border-radius: 0.625rem;
   text-align: center;
+  overflow: hidden;
 }
 
 .header-wrapper img {
@@ -53,16 +53,24 @@ body {
 .header-name {
   margin-bottom: 0.5rem;
   font-size: 1.5rem;
-  font-weight: 400;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100%;
+  max-height: 4rem;
 }
 
 .header-location {
   color: var(--green);
   font-weight: 700;
   font-size: 0.85rem;
+  margin-bottom: 0.5rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100%;
+  max-height: 3rem;
 }
 
-.socials {
+.socials-btn-wrapper {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -70,15 +78,19 @@ body {
   gap: 1rem;
 }
 
-.post-description {
+.description {
   margin-bottom: 1.25rem;
   font-size: 0.875rem;
   opacity: 0.6;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100%;
+  max-height: 5rem;
 }
 
-.socials > button {
-  width: 18rem;
-  padding: 1rem 1rem;
+.socials-btn-wrapper > button {
+  width: 100%;
+  padding: 1rem;
   border-radius: 0.5rem;
   border: none;
   background-color: var(--grey);
@@ -87,7 +99,13 @@ body {
   font-weight: 700;
 }
 
-.socials > button:hover {
+.socials-btn-wrapper > button:hover {
   background-color: var(--green);
   color: var(--off-black);
 }
+@media only screen and (max-width: 600px) {
+  .card {
+    width: 90%;
+  }
+}
+
